--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,27 +3,291 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#E5733D">
 
-    <!-- Nơi hiện các fragment -->
-    <FrameLayout
-        android:id="@+id/fragment_container"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+    <!-- Tiêu đề -->
+    <TextView
+        android:id="@+id/tvTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Foodde"
+        android:textSize="28sp"
+        android:textStyle="bold"
+        android:textColor="#fff"
+        android:layout_margin="16dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/bottom_nav"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <!-- Thanh tìm kiếm -->
+    <LinearLayout
+        android:id="@+id/searchLayout"
+        android:layout_width="0dp"
+        android:layout_height="45dp"
+        android:background="@drawable/search_bg"
+        android:orientation="horizontal"
+        android:paddingStart="8dp"
+        app:layout_constraintTop_toBottomOf="@id/tvTitle"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="8dp">
+
+        <EditText
+            android:id="@+id/etSearch"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"
+            android:hint="Tìm kiếm"
+            android:background="@android:color/transparent"/>
+
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@android:drawable/ic_menu_search"
+            android:padding="8dp"/>
+    </LinearLayout>
+
+    <!-- Danh mục món -->
+    <HorizontalScrollView
+        android:id="@+id/menuScroll"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:fillViewport="true"
+        android:background="#fff"
+        app:layout_constraintTop_toBottomOf="@id/searchLayout"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#E7744A"
+            android:padding="8dp"
+            android:fillViewport="true"
+            android:scrollbars="none">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
+
+                <!-- Danh mục: Bánh mì -->
+                <LinearLayout
+                    android:layout_width="80dp"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginEnd="12dp"
+                    android:gravity="center_horizontal">
+
+                    <ImageButton
+                        android:id="@+id/btnBanhMi"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:src="@drawable/banhmy"
+                        android:scaleType="centerCrop" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Bánh mì"
+                        android:gravity="center"
+                        android:textSize="12sp"
+                        android:layout_marginTop="4dp"
+                        android:textColor="#FFFFFF"
+                    android:textStyle="bold"
+                    android:background="@android:color/transparent" />
+
+                </LinearLayout>
+
+                <!-- Danh mục: Cơm -->
+                <LinearLayout
+                    android:layout_width="80dp"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginEnd="12dp"
+                    android:gravity="center_horizontal">
+
+                    <ImageButton
+                        android:id="@+id/btnCom"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:src="@drawable/com"
+                        android:scaleType="centerCrop" />
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Cơm"
+                        android:gravity="center"
+                        android:textSize="12sp"
+                        android:layout_marginTop="4dp"
+                        android:textColor="#FFFFFF"
+                        android:textStyle="bold"
+                        android:background="@android:color/transparent" />
+
+                </LinearLayout>
+
+                <!-- Danh mục: Phở -->
+                <LinearLayout
+                    android:layout_width="80dp"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginEnd="12dp"
+                    android:gravity="center_horizontal">
+
+                    <ImageButton
+                        android:id="@+id/btnPho"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:src="@drawable/pho"
+                        android:scaleType="centerCrop" />
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Phở "
+                        android:gravity="center"
+                        android:textSize="12sp"
+                        android:layout_marginTop="4dp"
+                        android:textColor="#FFFFFF"
+                        android:textStyle="bold"
+                        android:background="@android:color/transparent" />
+
+                </LinearLayout>
+
+                <!-- Danh mục: Trà sữa -->
+                <LinearLayout
+                    android:layout_width="80dp"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_marginEnd="12dp"
+                    android:gravity="center_horizontal">
+
+                    <ImageButton
+                        android:id="@+id/btnTraSua"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:src="@drawable/trasua"
+                        android:scaleType="centerCrop" />
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Trà Sữa"
+                        android:gravity="center"
+                        android:textSize="12sp"
+                        android:layout_marginTop="4dp"
+                        android:textColor="#FFFFFF"
+                        android:textStyle="bold"
+                        android:background="@android:color/transparent" />
+
+                </LinearLayout>
+
+                <!-- Danh mục: Cafe -->
+                <LinearLayout
+                    android:layout_width="80dp"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:gravity="center_horizontal">
+
+                    <ImageButton
+                        android:id="@+id/btnCafe"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:src="@drawable/cafe"
+                        android:scaleType="centerCrop" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Cà phê"
+                        android:gravity="center"
+                        android:textSize="12sp"
+                        android:layout_marginTop="4dp"
+                        android:textColor="#FFFFFF"
+                        android:textStyle="bold"
+                        android:background="@android:color/transparent" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+        </HorizontalScrollView>
+
+    </HorizontalScrollView>
+
+    <!-- Ảnh chuyển động -->
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/banner"
+        android:layout_width="0dp"
+        android:layout_height="150dp"
+        android:layout_margin="16dp"
+        app:layout_constraintTop_toBottomOf="@id/menuScroll"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <!-- Thanh menu dưới -->
+    <!-- Tabs -->
+    <LinearLayout
+        android:id="@+id/tabMenu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:gravity="center_vertical"
+        app:layout_constraintTop_toBottomOf="@id/banner"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <TextView
+            android:id="@+id/tabAll"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="All Menu"
+            android:textStyle="bold"
+            android:textColor="#000000"
+            android:textSize="16sp"
+            android:paddingEnd="16dp" />
+
+        <TextView
+            android:id="@+id/tabPraise"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Praise"
+            android:textStyle="normal"
+            android:textColor="#666666"
+            android:textSize="16sp" />
+    </LinearLayout>
+
+
+    <!-- Danh sách món ăn -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:background="@color/white"
+        android:id="@+id/rvFoods"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/banner"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="48dp"/>
+
+    <!-- Bottom Navigation -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_nav"
+        android:id="@+id/bottom_navigation"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:background="#E7744A"
         app:menu="@menu/bottom_nav_menu"
-        android:background="?android:attr/windowBackground"
+        app:itemIconTint="@color/black"
+        app:itemTextColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
