--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -15,6 +15,10 @@
         android:id="@+id/nav_notification"
         android:icon="@drawable/ic_notification"
         android:title="Thông báo" />
+    <item
+        android:id="@+id/donhang"
+        android:icon="@drawable/giohang"
+        android:title="đơn hàng " />
 
     <item
         android:id="@+id/nav_account"
