--- a/app/src/main/res/layout/activity_xacnhan_thanhtoan.xml
+++ b/app/src/main/res/layout/activity_xacnhan_thanhtoan.xml
@@ -14,4 +14,11 @@
         android:textSize="20sp"
         android:textColor="#4CAF50"
         android:textStyle="bold"/>
+
+    <Button
+        android:id="@+id/btnBackHome"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="🏠 Về trang chủ"
+        android:layout_marginTop="20dp"/>
 </LinearLayout>
