--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,14 +34,13 @@
         android:layout_marginEnd="16dp"
         android:layout_marginTop="8dp">
 
-        <EditText
-            android:id="@+id/etSearch"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="match_parent"
-            android:hint="Tìm kiếm"
-            android:background="@android:color/transparent"/>
-
+        <SearchView
+            android:id="@+id/searchView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:queryHint="Tìm kiếm sản phẩm"
+            android:iconifiedByDefault="false"
+            android:background="@android:color/white" />
         <ImageView
             android:layout_width="40dp"
             android:layout_height="40dp"
