--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -12,13 +12,13 @@
         android:title="Yêu thích" />
 
     <item
-        android:id="@+id/nav_notification"
-        android:icon="@drawable/ic_notification"
-        android:title="Thông báo" />
+        android:id="@+id/nav_order_history"
+        android:icon="@drawable/ic_history"
+        android:title="Lịch sử" />
     <item
         android:id="@+id/donhang"
         android:icon="@drawable/giohang"
-        android:title="đơn hàng " />
+        android:title="Đơn hàng " />
 
     <item
         android:id="@+id/nav_account"
