--- a/app/src/main/res/layout/activity_lich_su_don_hang.xml
+++ b/app/src/main/res/layout/activity_lich_su_don_hang.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    android:background="#FFF">
+    android:background="#FFFFFF">
 
     <!-- Nút back -->
     <ImageButton
@@ -32,12 +32,13 @@
     <!-- Danh sách đơn hàng -->
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
         <LinearLayout
             android:id="@+id/orderHistoryContainer"
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
     </ScrollView>
 </LinearLayout>
